[newsletter] new microservice

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -41,6 +41,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # This location matches all paths starting with /api/interviews
+        location /api/newsletter {
+            proxy_pass http://newsletter:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /api/mongolia {
             proxy_pass http://mongo_express:8081;  # Port where Mongo Express is running
             proxy_http_version 1.1;
