--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,10 @@ services:
     build:
       target: production # in Dockerfile
 
+  newsletter:
+    build:
+      target: production # in Dockerfile
+
   frontend:
     build:
       target: production # in Dockerfile
