--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.22.2",
+    "@mui/x-date-pickers": "^7.22.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
