[availability, docker-compose, nginx] new microservice

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -41,9 +41,18 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # This location matches all paths starting with /api/interviews
+        # This location matches all paths starting with /api/newsletter
         location /api/newsletter {
             proxy_pass http://newsletter:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # This location matches all paths starting with /api/newsletter
+        location /api/availability {
+            proxy_pass http://availability:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
