--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,6 +23,10 @@ services:
     build:
       target: production # in Dockerfile
 
+  availability:
+    build:
+      target: production # in Dockerfile
+
   frontend:
     build:
       target: production # in Dockerfile
