--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,15 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "base64-js": "^1.5.1",
     "date-fns": "^2.30.0",
+    "ieee754": "^1.2.1",
+    "isarray": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
+    "react-available-times": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
