[docker-compose, README, auth_and_permissions, frontend] cosmetic changes

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,8 +4,10 @@
 
 # and if you want to just build it:
 # docker-compose -f docker-compose.yml -f docker-compose.prod.yml build
+# docker compose -f docker-compose.yml -f docker-compose.prod.yml build
 # and if you want then to just run it:
 # docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --no-build
+# docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --no-build
 services:
   auth_and_permissions:
     build:
